src/ui/snapshots/rusty_amp__ui__draw__tests__ir_browser_modal.snap
---
source: src/ui/draw.rs
expression: text
---
┌────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────[ ] move┐
│  GATE ──▶ TS-808 ──▶ AMP+CAB ──▶ REVERB ──▶ OUTPUT                                                                   IN ▐░░░░░░░░░░▌          OUT ▐░░░░░░░░░▌          │
└────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┘
┏┤ MESA DUAL RECTIFIER ├━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━┓┏━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━┤ 🎙 MESA V30 ├┓
┃  AMP  [ JCM800 ]  ◀ DUAL RECT ▶  [ RANDALL ]  [ AC30 ]  [ DR103 ]  ↑/↓  A                                           ┃┃  CAB  ◀ MESA V30 ▶  [ MARSH GB ]  [ ORANGE ]  [ ┃
┃                                                                                                                     ┃┃                                                 ┃
┃         ···                ···                 ···                ··◇                 ◇··                ·◇·        ┃┃       ◇··             ···              ···      ┃
┃        · ● ◇              · ● ·               · ● ·              · ● ·               · ● ·              · ● ·       ┃┃      · ● ·           · ● ·            · ● ·     ┃
┃         · ·                · ◇  ╔ C A B I N E T   I R s ═════════════════════════════════════════════════════════════════════════════╗       ◇ ·              ◇ ·      ┃
┃      GAIN 7.5           BASS 10.║▶ Built-in cabs (no IR)                                                                             ║    BLEND 0.0        ROOM 0.0    ┃
┃                                 ║  (no .wav IRs found — drop files in ./irs or ~/.config/rusty-amp/irs)                              ║                                 ┃
┃                                 ║                                                                                                    ║                                 ┃
┃▚▞▚▞▚▞▚▞▚▞▚▞▚▞▚▞▚▞▚▞▚▞▚▞▚▞▚▞▚▞▚▞▚║                                                                                                    ║▚▞▚▞▚▞▚▞▚▞▚▞▚▞▚▞▚▞▚▞▚▞▚▞▚▞▚▞▚▞▚▞▚┃
┗━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━║                                                                                                    ║━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━┛
┌ GUITAR RIG ─────────────────────║                                                                                                    ║─────────────────────────────────┐
│┌ NOISE GATE ◉ ──────────────────║                                                                                                    ║────────────────────────────────┐│
││                2.0  3.0        ║                                                                                                    ║           ＋                    ││
│└────────────────────────────────║                                                                                                    ║────────────────────────────────┘│
││├───────────────────────────────║                                                                                                    ║───────────────────────────────┤││
││SELECT A PEDAL — ←→             ║                                                                                                    ║                                ││
││                                ║                                                                                                    ║                                ││
││                                ║                                                                                                    ║                                ││
││                                ║                                                                                                    ║                                ││
││                                ║                                                                                                    ║                                ││
││                                ║                                                                                                    ║                                ││
│└────────────────────────────────║                                                                                                    ║────────────────────────────────┘│
└─────────────────────────────────║                                                                                                    ║─────────────────────────────────┘
                                  ║                                                                                                    ║                                  
                                  ║                                                                                                    ║                                  
                                  ║                                                                                                    ║                                  
                                  ║                                                                                                    ║                                  
                                  ║                                                                                                    ║                                  
                                  ║                                                                                                    ║                                  
                                  ║                                                                                                    ║                                  
                                  ║                                                                                                    ║                                  
                                  ║                                                                                                    ║                                  
                                  ║                                                                                                    ║                                  
                                  ║                                                                                                    ║                                  
                                  ║                                                                                                    ║                                  
                                  ║                                                                                                    ║                                  
                                  ║                                                                                                    ║                                  
                                  ║                                                                                                    ║                                  
                                  ║                                                                                                    ║                                  
                                  ║                        ↑/↓ navigate  Enter load/clear  X A/B  Esc / I close                        ║                                  
                                  ║                                 no IR loaded — using built-in cabs                                 ║                                  
                                  ╚════════════════════════════════════════════════════════════════════════════════════════════════════╝
