src/ui/snapshots/rusty_amp__ui__draw__tests__practice_pane.snap
---
source: src/ui/draw.rs
expression: shown
---
╔════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════╗
║  R U S T Y  A M P  v0.2.14  ▐  MESA DUAL RECTIFIER  ▐  MESA 4×12 (V30)  ▐  ● POWER ON  ▐  ○ OFF AIR                                                                    ║
║  GATE ──▶ TS-808 ──▶ AMP ──▶ CAB ──▶ REVERB ──▶ OUTPUT                                                                                                                 ║
║════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════║
║  INPUT  ▐░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░▌          ║
║ OUTPUT  ▐░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░▌          ║
║         -60        -48        -36        -24        -12       -6     0 dB    0W  -120.0 dB                                                                             ║
║┏━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━┓║
║┃  AMP  [ JCM800 ]  ◀ DUAL RECT ▶  [ RANDALL ]  [ AC30 ]  [ DR103 ]  ↑/↓  A           CAB  ◀ MESA V30 ▶  [ MARSH GB ]  [ ORANGE ]  [ WEM FANE ]  C to toggle           ┃║
║┗━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━┛║
║┏┤ MESA DUAL RECTIFIER ├━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━┤ 🎙 MESA V30 ├┓║
║┃          ···                    ···                   ···                    ··◇                    ◇··                   ·◇·              ◇··       ···       ···   ┃║
║┃         · ● ◇                  · ● ·                 · ● ·                  · ● ·                  · ● ·                 · ● ·            · ● ·     · ● ·     · ● ·  ┃║
║┃          · ·                    · ◇                   ◇ ·                    · ·                    · ·                   · ·              · ·       ◇ ·       ◇ ·   ┃║
║┃       GAIN 7.5               BASS 10.0              MID 0.0              TREBLE 6.5            PRESENCE 4.0           MASTER 5.5         MIC 4.0  BLEND 0.0 ROOM 0.0 ┃║
║┃▚▞▚▞▚▞▚▞▚▞▚▞▚▞▚▞▚▞▚▞▚▞▚▞▚▞▚▞▚▞▚▞▚▞▚▞▚▞▚▞▚▞▚▞▚▞▚▞▚▞▚▞▚▞▚▞▚▞▚▞▚▞▚▞▚▞▚▞▚▞▚▞▚▞▚▞▚▞▚▞▚▞▚▞▚▞▚▞▚▞▚▞▚▞▚▞▚▞▚▞▚▞▚▞▚▞▚▞▚▞▚▞▚▞▚▞▚▞▚▞▚▞▚▞▚▞▚▞▚▞▚▞▚▞▚▞▚▞▚▞▚▞▚▞▚▞▚▞▚▞▚▞▚▞▚▞▚▞▚▞▚▞▚▞▚▞┃║
║┗━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━┛║
║┌ P R A C T I C E ─────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┐║
║│  no track — press B to load a backing track or take                                                                                                                  │║
║│                                                                                                                                                                      │║
║│                                                                                                                                                                      │║
║│                                                                                                                                                                      │║
║└──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┘║
║┌ GUITAR RIG ──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┐║
║│╔ + ADD ═════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════╗│║
║│║                                                                                 ＋                                                                                  ║│║
║│║                                                                                                                                                                    ║│║
║│╚════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════╝│║
║│┏┤ SELECT A PEDAL — Tab / ←→ ├━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━┓│║
║│┃                                                                Tab to a pedal to edit its controls.                                                                ┃│║
║│┃                                                                                                                                                                    ┃│║
║│┃                                                                                                                                                                    ┃│║
║│┃                                                                                                                                                                    ┃│║
║│┃                                                                                                                                                                    ┃│║
║│┃                                                                                                                                                                    ┃│║
║│┃                                                                                                                                                                    ┃│║
║│┃                                                                                                                                                                    ┃│║
║│┃                                                                                                                                                                    ┃│║
║│┃                                                                                                                                                                    ┃│║
║│┃                                                                                                                                                                    ┃│║
║│┃                                                                                                                                                                    ┃│║
║│┃                                                                                                                                                                    ┃│║
║│┃                                                                                                                                                                    ┃│║
║│┃                                                                                                                                                                    ┃│║
║│┃                                                                                                                                                                    ┃│║
║│┃                                                                                                                                                                    ┃│║
║│┃                                                                                                                                                                    ┃│║
║│┃                                                                                                                                                                    ┃│║
║│┃                                                                                                                                                                    ┃│║
║│┃                                                                                                                                                                    ┃│║
║│┃                                                                                                                                                                    ┃│║
║│┗━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━┛│║
║└──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┘║
║                                                                          K keybindings  Q quit                                                                         ║
╚════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════╝
