src/ui/snapshots/rusty_amp__ui__draw__tests__preset_modal.snap
---
source: src/ui/draw.rs
expression: text
---
╔════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════╗
║  R U S T Y  A M P  v0.2.14  ▐  MESA DUAL RECTIFIER  ▐  MESA 4×12 (V30)  ▐  ● POWER ON  ▐  ○ OFF AIR                                                                    ║
║  GATE ──▶ TS-808 ──▶ AMP ──▶ CAB ──▶ REVERB ──▶ OUTPUT                                                                                                                 ║
║════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════║
║  INPUT  ▐░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░▌          ║
║ OUTPUT  ▐░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░▌          ║
║         -60        -48        -36        -24        -12       -6     0 dB    0W  -120.0 dB                                                                             ║
║┏━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━┓║
║┃  AMP  [ JCM800 ]  ◀ DUAL RECT ▶╔ P R E S E T S ═════════════════════════════════════════════════════════════════════════════════════╗ toggle                         ┃║
║┗━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━║  Default values                                                                                    ║━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━┛║
║┏┤ MESA DUAL RECTIFIER ├━━━━━━━━━║  Clean Combo  sparkly cleans                                                                       ║━━━━━━━━━━━━━━━━━━┤ 🎙 MESA V30 ├┓║
║┃          ···                   ║▶ My Lead  saved rig  [user]                                                                        ║      ◇··       ···       ···   ┃║
║┃         · ● ◇                  ║                                                                                                    ║     · ● ·     · ● ·     · ● ·  ┃║
║┃          · ·                   ║                                                                                                    ║      · ·       ◇ ·       ◇ ·   ┃║
║┃       GAIN 7.5               BA║                                                                                                    ║    MIC 4.0  BLEND 0.0 ROOM 0.0 ┃║
║┃▚▞▚▞▚▞▚▞▚▞▚▞▚▞▚▞▚▞▚▞▚▞▚▞▚▞▚▞▚▞▚▞║                                                                                                    ║▚▞▚▞▚▞▚▞▚▞▚▞▚▞▚▞▚▞▚▞▚▞▚▞▚▞▚▞▚▞▚▞┃║
║┗━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━║                                                                                                    ║━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━┛║
║┌ GUITAR RIG ────────────────────║                                                                                                    ║────────────────────────────────┐║
║│╔ NOISE GATE ◉ ═════════════════║                                                                                                    ║═══════════════════════════════╗│║
║│║                2.0  3.0       ║                                                                                                    ║          ＋                    ║│║
║│║                ▗▄▄▄▄▄▄▄▖      ║                                                                                                    ║                               ║│║
║│╚═══════════════════════════════║                                                                                                    ║═══════════════════════════════╝│║
║│┏┤ SELECT A PEDAL — Tab / ←→ ├━━║                                                                                                    ║━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━┓│║
║│┃                               ║                                                                                                    ║                               ┃│║
║│┃                               ║                                                                                                    ║                               ┃│║
║│┃                               ║                                                                                                    ║                               ┃│║
║│┃                               ║                                                                                                    ║                               ┃│║
║│┃                               ║                                                                                                    ║                               ┃│║
║│┃                               ║                                                                                                    ║                               ┃│║
║│┃                               ║                                                                                                    ║                               ┃│║
║│┃                               ║                                                                                                    ║                               ┃│║
║│┃                               ║                                                                                                    ║                               ┃│║
║│┃                               ║                                                                                                    ║                               ┃│║
║│┃                               ║                                                                                                    ║                               ┃│║
║│┃                               ║                                                                                                    ║                               ┃│║
║│┃                               ║                                                                                                    ║                               ┃│║
║│┃                               ║                                                                                                    ║                               ┃│║
║│┃                               ║                                                                                                    ║                               ┃│║
║│┃                               ║                                                                                                    ║                               ┃│║
║│┃                               ║                                                                                                    ║                               ┃│║
║│┃                               ║                                                                                                    ║                               ┃│║
║│┃                               ║                                                                                                    ║                               ┃│║
║│┃                               ║                                                                                                    ║                               ┃│║
║│┃                               ║                     ↑/↓ navigate  Enter apply  S save  D delete  Esc / P close                     ║                               ┃│║
║│┃                               ║                                            ● user preset                                           ║                               ┃│║
║│┃                               ╚════════════════════════════════════════════════════════════════════════════════════════════════════╝                               ┃│║
║│┃                                                                                                                                                                    ┃│║
║│┃                                                                                                                                                                    ┃│║
║│┃                                                                                                                                                                    ┃│║
║│┃                                                                                                                                                                    ┃│║
║│┗━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━┛│║
║└──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┘║
║                                            Tab section  ←/→ knob  ↑/↓  +/- adjust  Space toggle  D remove  A amp  C cab  I IR                                          ║
║                                 X IR A/B  O devices  Z amp A/B  P presets  T tuner  M metro  V plugins  U amp plugin  R record  Q quit                                 ║
╚════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════╝
